# wmcli

./: Cargo.toml  README.md  package-lock.json
.githooks/: pre-commit
config/package/: PKGBUILD
libewmh/: Cargo.toml  README.md
libewmh/examples/: info.rs  place.rs  position.rs  shape.rs  static.rs
libewmh/src/: atoms.rs  error.rs  lib.rs  model.rs  window.rs  wm.rs
src/: main.rs
