[workspace]
members = ["libewmh"]

[package]
name = "wmcli"
version = "0.0.47"
edition = "2021"
authors = ["m93a", "phR0ze"]
license = "MIT OR Apache-2.0"
description = "CLI for manipulating windows in a window manager that supports EWMH"
repository = "https://github.com/m93a/wmcli"
exclude = [
  "docs",
  "config",
  "examples",
  ".git",
  ".githooks",
  ".github",
  "tests",
  "benches",
  "target",
  ".vscode",
]

# Higher the opt-level value the slower the compile time
[profile.release]
opt-level = 3 # Optimize for speed over size
lto = true    # Futher assist in optimization
debug = false # Provide debug symbols for Witcher

[profile.dev]
opt-level = 0 # Default no optimization

[dependencies]
gory = "0.1"
tracing = "0.1"
witcher = "0.1.19"
libewmh = { version = "0.0.1", path = "./libewmh" }
tracing-subscriber = "0.3"

[dependencies.clap]
version = "2.33"
default-features = false
features = ["suggestions"]

# Tests, examples and build.rs are built with these dependencies
[build-dependencies]
chrono = "0.4"
