[package]
name = "libewmh"
version = "0.0.1"
edition = "2021"
authors = ["m93a", "phR0ze"]
license = "MIT OR Apache-2.0"
description = "Rust API for working with the Extended Window Manager Hints (EWMH) on X11"
repository = "https://github.com/m93a/wmcli/tree/main/libewmh"
exclude = [
  "docs",
  "config",
  "examples",
  ".git",
  ".githooks",
  ".github",
  "tests",
  "benches",
  "target",
  ".vscode",
]

[dependencies]
tracing = "0.1"
x11rb = "0.13.0"
